--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,96 +10,488 @@
     outline: none;
 }
 
-body {
+svg {
+    cursor: pointer;
+}
+
+body,
+input {
     background: #fafafa;
-    font-family: 'Roboto', sans-serif;
+    font-family: "Segoe UI", "Roboto", Helvetica, Arial, sans-serif;
     position: relative;
 }
 
 header {
     position: fixed;
-    top: 0;
-    left: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 50px;
     background: #fff;
-    border-bottom: 1px solid #dfdfdf;
-    padding: 5px 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    border-bottom: 1px solid #dbdbdb;
+    left: 0;
+    top: 0;
+    margin-top: 6px;
+    z-index: 2;
 }
 
-.nav {
+.nav-container {
+    width: 62%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 75%;
-    height: 100%;
 }
 
+main {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
 
-.logo-container {
-    height: 100%;
-    margin-top: 5px;
+.main-container {
+    width: 62%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.logo-div {
+    height: 50px;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.logo-div img {
+    cursor: pointer;
+}
+
+.search-div {
+    border: 1px solid #dbdbdb;
+    border-radius: 3px;
+    background: #fafafa;
+    color: #8e8e8e;
+    cursor: text;
+    font-size: 14px;
+    font-weight: 300;
+    padding: 0 12px;
+    justify-content: center;
+    flex: 0 1 auto;
+    transform: translateX(28%);
+    height: 28px;
+    margin-top: -6px;
+    width: 220px;
 }
 
 .search-bar {
-    /* position: absolute; */
-    /* left: 50%; */
-    width: 200px;
-    height: 25px;
+    border: none;
     background: #fafafa;
-    border: 1px solid #dfdfdf;
-    border-radius: 2px;
-    color: rgba(0, 0, 0, 0.5);
-    /* transform: translateX(-50%); */
+    border-radius: 3px;
+    color: #262626;
+    outline: 0;
+    padding: 3px 12px;
 }
 
 .search-bar::placeholder {
     color: rgba(0, 0, 0, 0.5);
 }
 
-.icons {
+.opt-div {
     display: flex;
     justify-content: space-between;
-    height: 22px;
-    position: relative;
+}
+
+.opt-div:not(first-child) {
+    margin: 16px;
+    margin-top: 12px;
+    margin-right: 0;
 }
 
 .nav-icons {
     flex: 0 0 auto;
-    margin: 5px;
+    margin: 10px;
+    width: 22px;
+    height: 22px;
+    font-size: 24px;
 }
 
 .profile-ic {
-    border: 1px solid;
-    border-radius: 50%;
-    width: 26px;
-    height: 26px;
+    width: 23px;
+    overflow: hidden;
+    height: 23px;
+    border-radius: 50px;
 }
 
-.profile-ic div {
+.profile-ic img {
     width: 100%;
 }
 
-.profile-pic-ic {
-    object-fit: contain;
+.left-part {
+    width: 65%;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    top: 82px;
+}
+
+.right-part {
+    width: 19%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    top: 84px;
+    left: 61%;
+}
+
+.story-container {
+    display: flex;
+    justify-content: flex-start;
+    background: #fff;
+    border: 1px solid #dbdbdb;
+    border-radius: 3px;
+    height: 120px;
+    align-items: center;
+    width: 100%;
+    overflow-x: scroll;
+}
+
+.story-container::-webkit-scrollbar {
+    display: none;
+}
+
+.story-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 3px;
+    width: 80px;
+    max-width: 80px;
+}
+
+.story-card:first-child {
+    margin-left: 10px;
+}
+
+.profile-pic {
+    width: 66px;
+    height: 66px;
+    overflow: hidden;
+    border-radius: 50px;
+    border: none;
+    padding: 2px;
+}
+
+.unseen {
+    background: linear-gradient(45deg, rgb(255, 230, 0), rgb(255, 0, 128) 80%);
+}
+
+.seen {
+    background: hsl(0, 0%, 78%);
+}
+
+.profile-pic img {
     width: 100%;
     height: 100%;
+    border: 2px solid #fff;
+    object-fit: cover;
+    border-radius: 50px;
+    cursor: pointer;
 }
 
-@media (max-width:700px) {
-    .nav {
+.username {
+    letter-spacing: .01em;
+    max-width: 74px;
+    color: #262626;
+    font-size: 12px;
+    overflow: hidden;
+    text-align: center;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.post-container {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    background: #fff;
+    padding: 16px 0;
+    width: 100%;
+    margin-top: 10px;
+}
+
+.post-card {
+    width: 100%;
+    border: 1px solid #dbdbdb;
+    border-radius: 3px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+
+.user-info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 8px;
+    height: 60px;
+}
+
+.info {
+    display: flex;
+    align-items: center;
+}
+
+.user-info .profile-pic {
+    margin-right: 10px;
+    width: 42px;
+    height: 42px;
+}
+
+.user-info .username {
+    font-weight: 600;
+    color: #000;
+    font-size: 14px;
+    max-width: fit-content;
+}
+
+.post-details {
+    padding: 20px;
+    gap: 10px;
+    padding-bottom: 0;
+}
+
+.post-reactions {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    margin-top: -20px;
+    height: 50px;
+
+}
+
+.post-reactions .rec-icon {
+    height: 25px;
+    margin-right: 10px;
+}
+
+.sve-post-ic {
+    margin-left: auto;
+}
+
+.likes-div {
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.likes-div img {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: 1px solid #dbdbdb;
+    margin-right: 5px;
+}
+
+.likes-cnt span {
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.caption-div {
+    margin-top: 5px;
+    font-size: 14px;
+    font-weight: 400;
+    color: hsl(0, 0%, 15%);
+}
+
+.caption-div span {
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.post-time {
+    margin-top: 10px;
+    font-size: 10px;
+    font-weight: 400;
+    color: hsl(0, 0%, 60%);
+    text-transform: uppercase;
+}
+
+.view-all-cmt {
+    color: #8e8e8e;
+    font-size: 14px;
+}
+
+.comment-div {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-top: 1px solid #efefef;
+    color: #8e8e8e;
+    font-size: 14px;
+    line-height: 18px;
+    margin-top: 10px;
+    padding: 6px;
+    height: 50px;
+}
+
+.comment-div .rec-icon {
+    margin-right: 10px;
+}
+
+.comment-inp {
+    border: none;
+    width: 100%;
+}
+
+.action-btn,
+.comment-btn {
+    border: none;
+    color: #0095f6;
+    background: none;
+    cursor: pointer;
+}
+
+.comment-btn[disabled] {
+    opacity: .3;
+    pointer-events: none;
+}
+
+.login-div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    height: 100px;
+    align-items: center;
+}
+
+.logged-div,
+.s-userinfo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.logged-div .profile-pic,
+.s-userinfo .profile-pic {
+    margin-right: 10px;
+}
+
+.name-div {
+    font-weight: 600;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+    color: #262626;
+}
+
+.name-div .fullname {
+    color: #8e8e8e;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+}
+
+.suggestion-div {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.suggest-txt {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.suggestion-txt {
+    color: #8e8e8e;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 18px;
+}
+
+.see-all-txt {
+    color: #262626;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 16px;
+}
+
+.suggestions {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin-top: 10px;
+}
+
+.suggest-card {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 8px 0;
+}
+
+.s-userinfo .profile-pic {
+    width: 36px;
+    height: 36px;
+}
+
+.suggest-card .username {
+    text-align: start;
+    cursor: pointer;
+}
+
+.suggest-card .fullname {
+    font-size: 12px;
+}
+.footer-container{
+    padding: 5px;
+}
+
+@media (max-width:1200px) {
+
+    .nav-container {
+        width: 85%;
+    }
+
+    .main-container {
+        width: 85%;
+    }
+
+    .right-part {
+        left: 65%;
+        width: 26%;
+    }
+}
+
+@media (max-width:950px) {
+
+    .left-part {
         width: 100%;
     }
 
-    .search-container {
+    .mob-nav-hide,
+    .right-part {
+        display: none;
+    }
+}
+
+@media (max-width:720px) {
+    .comment-div {
         display: none;
     }
 
-    .mob-nav-hide {
-        display: none;
+    .post-details {
+        padding-bottom: 20px;
     }
-
 }
