--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -453,8 +453,13 @@ main {
 .suggest-card .fullname {
     font-size: 12px;
 }
-.footer-container{
+
+.footer-container {
     padding: 5px;
+}
+
+.mob-nav-div {
+    display: none;
 }
 
 @media (max-width:1200px) {
@@ -486,11 +491,86 @@ main {
 }
 
 @media (max-width:720px) {
-    .comment-div,.search-div {
+
+    .comment-div,
+    .search-div {
         display: none;
     }
 
     .post-details {
         padding-bottom: 20px;
+    }
+}
+
+@media (max-width:600px) {
+
+    header {
+        margin-top: 0;
+    }
+
+    .comment-div,
+    .search-div,
+    .mob-nav {
+        display: none;
+    }
+
+    .opt-div {
+        flex-direction: row-reverse;
+    }
+
+    .mob-nav-div {
+        position: fixed;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        bottom: 0;
+        z-index: 2;
+        width: 100%;
+        height: 50px;
+        border-top: 1px solid #dbdbdb;
+        background: #fff;
+    }
+
+    .mob-nav-div div {
+        flex: 0 0 auto;
+    }
+
+    .post-details {
+        padding: 10px;
+    }
+
+    .nav-container {
+        width: 97%;
+    }
+
+    .main-container {
+        width: 100%;
+    }
+
+    .story-container {
+        border-radius: 0;
+        height: 90px;
+    }
+
+    .story-card:first-child {
+        margin-left: 0;
+    }
+
+    .left-part {
+        top: 50px;
+    }
+
+    .post-container {
+        margin-top: 0;
+        padding: 0;
+    }
+
+    .post-card {
+        margin-bottom: 0;
+        border-radius: 0;
+    }
+
+    .rec-icon:last-child {
+        margin-right: 0;
     }
 }
