--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,131 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
-
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-:focus {
-    outline: none;
-}
-
-svg {
-    cursor: pointer;
-}
-
-body,
-input {
-    background: #fafafa;
-    font-family: "Segoe UI", "Roboto", Helvetica, Arial, sans-serif;
-    position: relative;
-}
-
-header {
-    position: fixed;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 50px;
-    background: #fff;
-    border-bottom: 1px solid #dbdbdb;
-    left: 0;
-    top: 0;
-    margin-top: 6px;
-    z-index: 2;
-}
-
-.nav-container {
-    width: 62%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-main {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-
-.main-container {
-    width: 62%;
-    display: flex;
-    justify-content: space-between;
-}
-
-.logo-div {
-    height: 50px;
-    align-items: center;
-    margin-top: 20px;
-}
-
-.logo-div img {
-    cursor: pointer;
-}
-
-.search-div {
-    border: 1px solid #dbdbdb;
-    border-radius: 3px;
-    background: #fafafa;
-    color: #8e8e8e;
-    cursor: text;
-    font-size: 14px;
-    font-weight: 300;
-    padding: 0 12px;
-    justify-content: center;
-    flex: 0 1 auto;
-    transform: translateX(28%);
-    height: 28px;
-    margin-top: -6px;
-    width: 220px;
-}
-
-.search-bar {
-    border: none;
-    background: #fafafa;
-    border-radius: 3px;
-    color: #262626;
-    outline: 0;
-    padding: 3px 12px;
-}
-
-.search-bar::placeholder {
-    color: rgba(0, 0, 0, 0.5);
-}
-
-.opt-div {
-    display: flex;
-    justify-content: space-between;
-}
-
-.opt-div:not(first-child) {
-    margin: 16px;
-    margin-top: 12px;
-    margin-right: 0;
-}
-
-.nav-icons {
-    flex: 0 0 auto;
-    margin: 10px;
-    width: 22px;
-    height: 22px;
-    font-size: 24px;
-}
-
-.profile-ic {
-    width: 23px;
-    overflow: hidden;
-    height: 23px;
-    border-radius: 50px;
-}
-
-.profile-ic img {
-    width: 100%;
-}
-
 .left-part {
     width: 65%;
     display: flex;
@@ -171,42 +43,6 @@ main {
 
 .story-card:first-child {
     margin-left: 10px;
-}
-
-.profile-pic {
-    width: 66px;
-    height: 66px;
-    overflow: hidden;
-    border-radius: 50px;
-    border: none;
-    padding: 2px;
-}
-
-.unseen {
-    background: linear-gradient(45deg, rgb(255, 230, 0), rgb(255, 0, 128) 80%);
-}
-
-.seen {
-    background: hsl(0, 0%, 78%);
-}
-
-.profile-pic img {
-    width: 100%;
-    height: 100%;
-    border: 2px solid #fff;
-    object-fit: cover;
-    border-radius: 50px;
-    cursor: pointer;
-}
-
-.username {
-    letter-spacing: .01em;
-    max-width: 74px;
-    color: #262626;
-    font-size: 12px;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
 }
 
 .post-container {
@@ -454,23 +290,7 @@ main {
     font-size: 12px;
 }
 
-.footer-container {
-    padding: 5px;
-}
-
-.mob-nav-div {
-    display: none;
-}
-
 @media (max-width:1200px) {
-
-    .nav-container {
-        width: 85%;
-    }
-
-    .main-container {
-        width: 85%;
-    }
 
     .right-part {
         left: 65%;
@@ -484,7 +304,6 @@ main {
         width: 100%;
     }
 
-    .mob-nav-hide,
     .right-part {
         display: none;
     }
@@ -492,8 +311,7 @@ main {
 
 @media (max-width:720px) {
 
-    .comment-div,
-    .search-div {
+    .comment-div {
         display: none;
     }
 
@@ -504,47 +322,12 @@ main {
 
 @media (max-width:600px) {
 
-    header {
-        margin-top: 0;
-    }
-
-    .comment-div,
-    .search-div,
-    .mob-nav {
+    .comment-div {
         display: none;
-    }
-
-    .opt-div {
-        flex-direction: row-reverse;
-    }
-
-    .mob-nav-div {
-        position: fixed;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        bottom: 0;
-        z-index: 2;
-        width: 100%;
-        height: 50px;
-        border-top: 1px solid #dbdbdb;
-        background: #fff;
-    }
-
-    .mob-nav-div div {
-        flex: 0 0 auto;
     }
 
     .post-details {
         padding: 10px;
-    }
-
-    .nav-container {
-        width: 97%;
-    }
-
-    .main-container {
-        width: 100%;
     }
 
     .story-container {
@@ -573,7 +356,7 @@ main {
     .rec-icon:last-child {
         margin-right: 0;
     }
-    
+
     .post-card:last-child {
         margin-bottom: 50px;
     }
