--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -10,8 +10,18 @@
     outline: none;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 svg {
     cursor: pointer;
+    user-select: none;
 }
 
 body,
@@ -169,6 +179,42 @@ main {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+}
+
+.like-animation {
+    width: 84px;
+    height: 62px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    background: url("https://raw.githubusercontent.com/akshat-jjain/Instagram-clone/main/assets/images/like-em.png") no-repeat center/contain;
+    opacity: 0;
+    transform: scale(0);
+}
+
+@keyframes like-animation {
+    0% {
+        opacity: 0;
+        transform: scale(0);
+    }
+
+    15% {
+        opacity: .9;
+        transform: scale(1.2);
+    }
+
+    30% {
+        transform: scale(.95);
+    }
+
+    45%,
+    80% {
+        opacity: .9;
+        transform: scale(1);
+    }
 }
 
 @media (max-width:1200px) {
