--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -62,7 +62,12 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
+    position: relative;
 }
+
+/* .post-card img {
+    cursor: pointer;
+} */
 
 .user-info {
     display: flex;
