--- a/assets/css/create.css
+++ b/assets/css/create.css
@@ -172,6 +172,9 @@ aside {
     .input-div-cont {
         flex-direction: column;
         margin-bottom: 8px;
-
+    }
+    .input-div,
+    aside {
+        width: 100%;
     }
 }
