--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -65,9 +65,24 @@
     position: relative;
 }
 
-/* .post-card img {
-    cursor: pointer;
-} */
+
+.post-img-block {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    overflow-x: scroll;
+    display: flex;
+}
+
+.post-img-block img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.post-img-block::-webkit-scrollbar {
+    display: none;
+}
 
 .user-info {
     display: flex;
